--- a/Parking.HTML
+++ b/Parking.HTML
@@ -8,11 +8,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Car Parking System</h1>
+    <h1>Imling Parking </h1>
     <input type="text" id="searchInput" placeholder="Enter car number" />
-    <button id="searchButton">Search</button>
     <div id="result"></div>
-  </div>
-  <script src="./script.js"></script>
+ 
+  <p>Wimmer CSU Senioren BUS Grammelsebrger Busreisen <br>Komt um 16:30 </p>
+   </div>
+ <script src="./script.js"></script>
 </body>
 </html>
