--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
     <div class="container">
         <h1>Imling Parking</h1>
-        <input type="text" id="searchInput" list="carNumbers" placeholder="Enter car number" />
-        <datalist id="carNumbers">
-            <!-- Опції для випадаючого списку будуть додані за допомогою JavaScript -->
-        </datalist>
+        <input type="text" id="searchInput" placeholder="Enter car number" list="carNumbers" />
+        <datalist id="carNumbers"></datalist>
         <div id="result"></div>
         <p>Wimmer CSU Senioren BUS Grammelsebrger Busreisen <br>Komt um 16:30 </p>
     </div>
