--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Imling Parking</h1>
+      <a href="https://www.immling.de/" target="_blank">Visit our website</a>
+        <h1>Imling Festival <br> Parking</h1>
         <input type="text" id="searchInput" placeholder="Enter car number" list="carNumbers" />
         <datalist id="carNumbers"></datalist>
         <div id="result"></div>
-        <p>Wimmer CSU Senioren BUS Grammelsebrger Busreisen <br>Komt um 16:30 </p>
+        <p class="importantInfo">Wimmer CSU Senioren BUS Grammelsebrger Busreisen <br>Komt um 16:30 </p>
     </div>
     <script src="./script.js"></script>
 </body>
